syntax = "proto3";
option go_package = "msgProto/MSG_MainModule";
package MSG_MainModule;

// add by stefanchen 
// 主模块消息结构
enum MAINMSG
{
    Begin = 0; //起点消息 begin msg
    SERVER = 1; //服务器间消息 s2s for each server
    LOGIN = 2;  //登陆模块消息 c2s for login server
    RPC = 3;    // rpc call   rpc 调用
    HEARTBEAT = 4; // heart beat 心跳
    CENTERGATE = 5; //center gate 中心网关

    // for game server
    PLAYER = 11; //玩家消息
    CHAT   = 12; //聊天
}

